Corrected title card on tablet portrait layout

--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -110,7 +110,7 @@
 
 .card-container-tablet {
     @extend .card-container;
-    ion-card {
+    .card {
         width: 66%;
     }
 }
